[package]
name = "windows-netns-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
serde_json = "^1.0.105"
tokio = { version = "1.40.0", features = ["net"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = ["Win32_System_HostCompute", "Win32_System_HostComputeNetwork", "Win32_System_HostComputeSystem", "Win32_NetworkManagement_IpHelper", "Win32_System_Com"] }
windows-strings = "0.1"
hcn = { git = "https://github.com/jsturtevant/hcn-rs.git" }
